crates/dbdict/tests/snapshots/validate_spec__s12_wrong_value_type.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 615
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-crates/dbdict
tables:
  - name: table
    columns:
      - name: count
        type: number
        examples: [1, two, 3]
────────────────────────────────────────
error: [S12] Each `examples` value of a `number` column must be a number.
 --> dict.yaml:8:23
  |
4 |   - name: table
5 |     columns:
6 |       - name: count
7 |         type: number
8 |         examples: [1, two, 3]
  |                       ^^^ is a string
