crates/dbdict/tests/snapshots/validate_spec__s17_multiple_keys.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 755
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-crates/dbdict
version:
  date: 2024-01-31
  hash: a1b2c3d
────────────────────────────────────────
error: [S17] A `version` must give exactly one of `number`, `date`, or `hash`.
 --> dict.yaml:5:3
  |
3 | version:
4 |   date: 2024-01-31
5 |   hash: a1b2c3d
  |   ^^^^ `date` has already been supplied
