crates/dbdict/tests/snapshots/validate_spec__warn_missing_learn_more.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 229
---
$version: 0.1.0
────────────────────────────────────────
warning: [S09] A document should point readers to the spec with `$learn_more`.
 --> dict.yaml:1:1
  |
1 | $version: 0.1.0
  | ^^^^^^^^ `$learn_more` is not set
  |
help: point readers to the spec
  |
1 + $learn_more: https://github.com/pjc-crates/dbdict
  |
