crates/dbdict/tests/snapshots/validate_spec__warn_single_table_description.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 249
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-wspace/dbdict
tables:
  - name: food
    description: Each row is a food item.
    details: Collected from the USDA FoodData Central database.
    columns:
      - name: id
        type: number(id)
        examples: [1, 2, 3]
────────────────────────────────────────
warning: [S16] A single-table dictionary's description and details belong at the top level.
 --> dict.yaml:5:5
  |
4 |   - name: food
5 |     description: Each row is a food item.
  |     ^^^^^^^^^^^ table `food` has a `description`
warning: [S16] A single-table dictionary's description and details belong at the top level.
 --> dict.yaml:6:5
  |
4 |   - name: food
5 |     description: Each row is a food item.
6 |     details: Collected from the USDA FoodData Central database.
  |     ^^^^^^^ table `food` has a `details`
